# Hands-On-Large-Language-Models

./: .gitignore  .gitmodules  README_AMD.md  bitsandbytes.md  mean-pooling.ipynb  pyproject.toml  test.py
chapter01/: Chapter 1 - Introduction to Language Models.ipynb
chapter02/: Chapter 2 - Tokens and Token Embeddings.ipynb
chapter03/: Chapter 3 - Looking Inside LLMs.ipynb
chapter04/: Chapter 4 - Text Classification.ipynb
chapter06/: Chapter 6 - Prompt Engineering.ipynb
chapter07/: Chapter 7 - Advanced Text Generation Techniques and Tools.ipynb
chapter08/: Chapter 8 - Semantic Search.ipynb
chapter09/: Chapter 9 - Multimodal Large Language Models.ipynb
chapter10/: Chapter 10 - Creating Text Embedding Models.ipynb
chapter11/: Chapter 11 - Fine-Tuning BERT.ipynb
chapter12/: Chapter 12 - Fine-tuning Generation Models.ipynb
