[project]
name = "hands-on-large-language-models"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.4.0",
    "annoy>=1.17.3",
    "bitsandbytes>=0.45.2",
    "datasets>=3.3.2",
    "duckduckgo-search>=7.4.4",
    "evaluate>=0.4.3",
    "faiss-cpu>=1.10.0",
    "gensim>=4.3.2",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "langchain>=0.3.19",
    "langchain-community>=0.3.18",
    "matplotlib>=3.10.0",
    "mteb>=1.19.9",
    "nltk>=3.9.1",
    "numexpr>=2.10.2",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "peft>=0.14.0",
    "pytorch-triton-rocm>=3.2.0",
    "scipy>=1.15.2",
    "sentence-transformers>=3.4.1",
    "seqeval>=1.2.2",
    "setfit>=1.1.1",
    "torch>=2.6.0",
    "transformers>=4.49.0",
    "trl>=0.15.1",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-rocm" },
]
torchvision = [
    { index = "pytorch-rocm" },
]
torchaudio = [
    { index = "pytorch-rocm" },
]
pytorch-triton-rocm = [
    { index = "pytorch-rocm" },
]

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm6.2.4"
explicit = true
